# rare-books-bot

./: .dockerignore  .gitignore  .pylintrc  ACTION_PLAN.md  BRANCH_ANALYSIS_2025-11-21.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  FINDINGS.yaml  IMPLEMENTATION_PLAN.md  NEXT_AUDIT_CHECKLIST.md  README.md  deploy.sh  fix_to_commit.py  folder_structure.txt  instructions.txt  llms.txt  new-fix.py  outlook_connector_from_wsl.md  plan.mf  pyproject.toml  pytest.ini  run_chat_ui.sh  run_ui.sh  scripts_cleanup_plan.md  scripts_cleanup_revised.txt  tests_cleanup_plan.md
.a5c/: package-lock.json  package.json
.a5c/processes/: active-subgroup-scoping-inputs.json  active-subgroup-scoping.js  agent-role-enrichment.diagram.md  agent-role-enrichment.js  agent-role-enrichment.process.md  audit-fix-all.js  audit-fix-p3.js  auth-plan-a.js  auth-plan-b.js  auth-plan-c.js  cascading-filters.js  chat-bug-hunt-inputs.json  chat-bug-hunt.js  data-model-analysis.js  data-quality-scorecard-inputs.json  data-quality-scorecard.diagram.md  data-quality-scorecard.js  data-quality-scorecard.process.md  db-rebuild-inputs.json  db-rebuild.js  debug-streaming-playwright-inputs.json  debug-streaming-playwright.js  definitive-implementation-plan.diagram.md  definitive-implementation-plan.js  definitive-implementation-plan.process.md  deterministic-bugs-batch3-inputs.json  deterministic-bugs-batch3.js  docs-reorganization-inputs.json  docs-reorganization.js  docs-sync-consolidate-inputs.json  docs-sync-consolidate.js  docs-sync-github-plugin-inputs.json  docs-sync-github-plugin.js  docs-sync-implement-inputs.json  docs-sync-implement.js  docs-sync-plugin-inputs.json  docs-sync-plugin.js  empirical-verification-inputs.json  empirical-verification.js  enrichment-record-panel.js  (+83 more)
.claude/: project.json
app/: README.md  cli.py  qa.py
app/api/: README.md  __init__.py  auth_db.py  auth_deps.py  auth_models.py  auth_routes.py  auth_service.py  compare.py  diagnostics.py  main.py  (+12 more)
assets/: README.md
configs/: README.md  chunk_rules.yaml  outlook_helper.yaml  outlook_helper.yaml.template
docker/: cenlib-rare-books.conf  entrypoint.sh  nginx.conf  supervisord.conf
docs/: DOCUMENTATION_CLEANUP_PLAN.md  MASTER_ROADMAP.md  README.md  metadata_workbench.md  metadata_workbench_architecture.md  model_index.md  qa_wizard_implementation.md  roadmap.txt  salvaged_disscussion.txt  session_management_implementation_plan.md
docs-sync/: topic-map.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
reports/: 00-executive-report.md  03-project-goal.md  05-redundancy-analysis.md  06-new-ui-definition.md  07-migration-plan.md  08-empirical-db-probe.md  10-empirical-api-verify.md  12-empirical-refinements.md  candidate_linkages.csv  chat-test-results.md  historian-enhancement-plan.md  network-methodology.md  security-reaudit.md
scripts/: README.md  shared_models.py
tests/: test_eval_judge.py  test_eval_query_set.py  test_llm_client.py  test_models_config.py
(+2305 files in other folders)
