[project]
name = "rare-books-bot"
version = "0.1.0"
description = "Bibliographic discovery system for rare books using MARC XML"
authors = [
    {name = "Hagay Bar", email = "hagay.bar@gmail.com"}
]
readme = "CLAUDE.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    # Core dependencies
    "pyyaml>=6.0.2,<7.0.0",           # Config loading (utils/config_loader.py)
    "typer>=0.16.0,<0.17.0",          # CLI framework (app/cli.py)
    "colorlog>=6.9.0,<7.0.0",         # Colored logging (utils/logger.py)

    # MARC XML parsing
    "pymarc>=5.2.2,<6.0.0",           # MARC record parsing
    "lxml>=5.3.0,<6.0.0",             # XML parsing

    # Data models and validation
    "pydantic>=2.10.5,<3.0.0",        # Data models with validation

    # LLM client (for M4/M5 query planning)
    "litellm>=1.73.0,<2.0.0",         # LLM API client (completer.py)

    # Data manipulation (optional, may be useful)
    "pandas>=2.3.0,<3.0.0",           # Data manipulation

    # Code quality (in main deps for convenience)
    "pylint>=3.3.7,<4.0.0",
    "black>=25.1.0,<26.0.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
docstring-code-format = true
quote-style = "preserve"

[tool.ruff.lint]
select = ["E", "F"]
ignore = []

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.0.0"              # Test coverage
ruff = "^0.12.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
